# forex

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  app.py  bootstrap.py  forex_training.ipynb  hello.txt  main.py  main_live.py  main_train.py  pyproject.toml  run_forex_live.ps1  symbol_overrides.json  tools.py  training_forex.ipynb  training_tools.py  vulture_whitelist.py  yes.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr-labeler.yml  release.yml  stale.yml
application/: __init__.py  state.py
application/broker/: adapters.py  history_download_pipeline.py  history_pipeline.py  protocols.py  use_cases.py
broker/: __init__.py  account.py  app_auth.py  base.py  ctrader_client.py  oauth.py
broker/core/: __init__.py  provider.py
broker/oauth/: __init__.py  callback_server.py  services.py  tokens.py
broker/providers/: __init__.py
broker/services/: __init__.py  account_funds_service.py  account_list_service.py  app_auth_service.py  oauth_login_service.py  oauth_service.py  trendbar_history_service.py  trendbar_service.py
config/: __init__.py  logging.py  paths.py  runtime.py  settings.py
config/training_presets/: best_playback_s12.json
data/: README.md
docs/: architecture.md  ctrader_openapi_fields.md  ctrader_openapi_fields_accounts.md  ctrader_openapi_list.md  data_governance.md  development.md  operations.md  project_structure.md  research_readiness_report.md  research_readiness_report_clean15m_5y.md  research_readiness_report_clean1h_5y.md  research_readiness_report_clean4h_5y.md  research_readiness_report_usdjpy_clean5m_3y.md  research_readiness_report_xauusd_clean10m_5y.md  rl_research_stop_summary.md  timeframe_readiness_comparison_5y.md  versioning.md
domain/: __init__.py  accounts.py  auth.py
historical-candles/: usdjpy-d1.csv  usdjpy-h12.csv  usdjpy-h3.csv  usdjpy-h4.csv  usdjpy-h6.csv  usdjpy-h8.csv
infrastructure/broker/ctrader/: provider.py
infrastructure/broker/fake/: __init__.py  provider.py
infrastructure/storage/: json_store.py
ml/: requirements.txt
ml/rl/envs/: __init__.py  trading_env.py
ml/rl/features/: feature_builder.py
ml/rl/sim/: run_live_sim.py
ml/rl/train/: train_ppo.py
scripts/: bootstrap.sh  bump_version.py  generate_release_checksums.py  release_check.sh  run-live.sh  run-train-best-playback.sh  run-train.sh  validate_release_metadata.py  verify_release_artifacts.py  verify_release_checksums.py
scripts/windows/: run-live.ps1
src/app/: bootstrap.py
src/app/entrypoints/: app.py  live.py  train.py
src/application/: __init__.py
src/application/broker/: adapters.py  history_download_pipeline.py  protocols.py  use_cases.py
src/broker/core/: provider.py
src/broker/oauth/: __init__.py  callback_server.py
src/config/: __init__.py  paths.py  runtime.py
src/domain/: __init__.py  symbols.py
src/forex/: __init__.py
src/forex/app/: bootstrap.py
src/forex/application/: __init__.py  events.py  state.py
src/forex/config/: __init__.py  constants.py  data_governance.py  logging.py  (+3 more)
src/infrastructure/: __init__.py
src/utils/: __init__.py
tests/: test_account_funds_timeout_guard.py  test_app_auth_service_watchdog.py  test_broker_use_cases.py  test_bump_version_script.py  test_cnn_extractor.py  test_data_governance.py  test_feature_builder.py  test_feature_redundancy.py  test_feature_snr.py  test_generate_release_checksums.py  test_history_integrity.py  test_live_account_controller.py  test_live_autotrade_startup_guards.py  test_live_session_orchestrator.py  test_market_data_timeframe.py  test_message_helpers.py  test_metrics.py  test_package_metadata.py  test_reconnect_log_analyzer.py  test_run_live_sim.py  test_service_binding.py  test_soak_assert.py  test_supervised_baseline_eval.py  test_supervised_segment_diagnostics.py  test_token_lifecycle.py  test_trading_config_io.py  test_trading_env.py  test_train_ppo_warm_start.py  test_trendbar_history_window.py  test_ui_params_store.py  test_ui_smoke.py  test_validate_release_metadata.py  test_verify_release_artifacts.py  test_verify_release_checksums.py  test_version_metadata.py
tools/rl/: run_live_sim.py
ui/: main_window.py
ui/controllers/: __init__.py  connection_controller.py  history_download_controller.py  ppo_training_controller.py  simulation_controller.py  toolbar_controller.py  trendbar_controller.py
ui/dialogs/: __init__.py  account_dialog.py  app_auth_dialog.py  base_auth_dialog.py  history_download_dialog.py  oauth_dialog.py
ui/layout/: __init__.py  dock_manager.py  main_window_builder.py  panel_switcher.py  toolbar_actions.py
ui/live/: __init__.py  main_window.py
ui/presenters/: __init__.py  base.py  simulation_presenter.py  training_presenter.py
ui/state/: __init__.py  base.py  history_download_state.py  simulation_state.py  training_state.py
ui/styles/: app.qss
ui/train/: main_window.py
ui/utils/: formatters.py  path_utils.py
ui/widgets/: __init__.py  form_helpers.py  layout_helpers.py  log_panel.py  log_widget.py  simulation_panel.py  status_widget.py  trade_panel.py  training_panel.py
ui_live/: main_window.py
ui_train/: main_window.py
ui_train/controllers/: __init__.py  connection_controller.py  history_download_controller.py  ppo_training_controller.py  simulation_controller.py  trendbar_controller.py
ui_train/dialogs/: __init__.py  app_auth_dialog.py  base_auth_dialog.py  history_download_dialog.py  oauth_dialog.py
ui_train/layout/: __init__.py  main_window_builder.py  panel_switcher.py
ui_train/presenters/: __init__.py  simulation_presenter.py  training_presenter.py
ui_train/state/: __init__.py  history_download_state.py  simulation_state.py  training_state.py
ui_train/styles/: app.qss
ui_train/utils/: formatters.py
ui_train/widgets/: __init__.py  log_widget.py  simulation_panel.py  status_widget.py  trade_panel.py  training_panel.py
utils/: __init__.py  reactor_manager.py
(+241 files in other folders)
