[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex"
version = "0.1.0"
description = "Forex trading UI, broker integration, and RL tooling"
readme = "docs/architecture.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = []

[project.scripts]
forex-train = "forex.app.entrypoints.train:main"
forex-live = "forex.app.entrypoints.live:main"

[project.optional-dependencies]
ui = [
  "PySide6",
  "pyqtgraph",
  "numpy",
  "pandas",
]
ml = [
  "numpy",
  "pandas",
  "gymnasium",
  "stable-baselines3",
  "optuna",
]
ctrader = [
  "ctrader-open-api",
]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "import-linter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"forex.ui.shared.styles" = ["app.qss"]

[tool.importlinter]
include_external_packages = false
root_packages = ["forex"]

[[tool.importlinter.contracts]]
name = "Domain Is Independent"
type = "forbidden"
source_modules = ["forex.domain"]
forbidden_modules = [
  "forex.application",
  "forex.infrastructure",
  "forex.ui",
  "forex.app",
  "forex.config",
  "forex.tools",
  "forex.ml",
  "forex.utils",
]

[[tool.importlinter.contracts]]
name = "Application Does Not Depend On UI Or App"
type = "forbidden"
source_modules = ["forex.application"]
forbidden_modules = ["forex.ui", "forex.app"]

[[tool.importlinter.contracts]]
name = "Infrastructure Does Not Depend On UI Or App"
type = "forbidden"
source_modules = ["forex.infrastructure"]
forbidden_modules = ["forex.ui", "forex.app"]
