[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex"
version = "0.1.0"
description = "Forex trading UI, broker integration, and RL tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = []

[project.scripts]
forex = "forex.app.cli.launcher:main"
forex-train = "forex.app.cli.train:main"
forex-live = "forex.app.cli.live:main"

[project.optional-dependencies]
ui = [
  "PySide6",
  "pyqtgraph",
  "numpy",
  "pandas",
]
ml = [
  "numpy",
  "pandas",
  "gymnasium",
  "stable-baselines3",
  "optuna",
]
ctrader = [
  "ctrader-open-api",
]
dev = [
  "black",
  "import-linter",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "vulture",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"forex.ui.shared.styles" = ["app.qss"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["forex"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true

[tool.importlinter]
include_external_packages = false
root_packages = ["forex"]

[[tool.importlinter.contracts]]
name = "Domain Is Independent"
type = "forbidden"
source_modules = ["forex.domain"]
forbidden_modules = [
  "forex.application",
  "forex.infrastructure",
  "forex.ui",
  "forex.app",
  "forex.config",
  "forex.tools",
  "forex.ml",
  "forex.utils",
]

[[tool.importlinter.contracts]]
name = "Application Does Not Depend On UI Or App"
type = "forbidden"
source_modules = ["forex.application"]
forbidden_modules = ["forex.ui", "forex.app"]

[[tool.importlinter.contracts]]
name = "Infrastructure Does Not Depend On UI Or App"
type = "forbidden"
source_modules = ["forex.infrastructure"]
forbidden_modules = ["forex.ui", "forex.app"]
